[gd_scene load_steps=2 format=3 uid="uid://cb5ydel6nevps"]

[ext_resource type="Script" uid="uid://by4k0fonpst6u" path="res://scenes/craft/item_ui_craft.gd" id="1_wcrgl"]

[node name="ItemUICraft" type="HBoxContainer"]
script = ExtResource("1_wcrgl")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="NameLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Item Name"

[node name="DescriptionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Description"

[node name="PriceLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Price: 0"

[node name="BuyButton" type="Button" parent="."]
layout_mode = 2
text = "Comprar"
